Added form and validation

--- a/index.html
+++ b/index.html
@@ -123,12 +123,27 @@
 
 		<div class="module open">
 			<div class="module-top">
-				<h2>Buyer's Details</h2>
+				<h2>Re-open negotiations</h2>
 				<a class="toggle" href="">hide</a>
 			</div>
 			<div class="module-body">
 				
-body
+				<div class="negotiate-for-me">
+					<p>Would you like your Expert, Robert White, to negotiate on your behalf? It’s completely free!</p>
+					<a class="button" href="">Negotiate for me</a>
+				</div>
+
+				<div class="submit-offer">
+					<p class="top">Enter an offer you would be willing to accept:<p>
+					<form>
+						<div class="clearfix">
+							<p class="pound"></p>
+							<input type="text" name="offer" id="offer" size="12" value="0" />
+						</div>
+						<a class="button" href="">Add Comments</a>
+					</form>
+					<a class="submit-button" href="">Submit Offer</a>
+				</div>
 
 			</div>
 		</div>
